# SIEngine-old

./: .gitignore  CMakeLists.txt  README.md
res/shaders/: colorfill_fshader.fs  default.frag  default.vert  f_shader.fs  f_shader.txt  lightobject_fshader.fs  v_shader.txt  v_shader.vs
src/: main.cpp
src/Loader/: GLLoad.cpp  GLLoad.h  Window.cpp  Window.h
src/Render/: Camera.cpp  Camera.h  IndexBuffer.cpp  IndexBuffer.h  Scene.cpp  Scene.h  ShaderProgram.cpp  ShaderProgram.h  Sprite.cpp  Sprite.h  Texture2D.cpp  Texture2D.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h  VertexBufferLayout.cpp  VertexBufferLayout.h
src/Render/Objects/: Cube.cpp  Cube.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  NullObject.cpp  NullObject.h  Scene.cpp  Scene.h  Sphere.cpp  Sphere.h  Sprite.cpp  Sprite.h
src/Resources/: ResourceManager.cpp  ResourceManager.h  ShaderProgram.cpp  ShaderProgram.h  stb_image.h
